// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CheckRadio when not creatable 1`] = `
<div
  data-props={
    Object {
      "allowDuplicates": true,
      "alwaysReturnArray": false,
      "appendToBody": false,
      "checkRadioMaxCount": 10,
      "component_AppendToBodyOptionsWrapper": [Function],
      "component_CheckBox": [Function],
      "component_CheckRadio": [Function],
      "component_HtmlFieldData": [Function],
      "component_Option": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Radio": [Function],
      "component_Search": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "hide": [Function],
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "placeholder": [Function],
            "searchText": [Function],
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Select": [Function],
      "component_Selection": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(SelectionWrapper)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_StyledAppendToBodyOptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Switch": [Function],
      "component_Wrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "creatable": false,
      "disabled": false,
      "filterOptions": [Function],
      "hasOptionGroups": false,
      "hasOptions": true,
      "hasSelection": false,
      "hierarchicalOptions": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "labelKey": [Function],
      "massageDataIn": [Function],
      "massageDataOut": [Function],
      "massaged": true,
      "multiple": false,
      "name": undefined,
      "onBlur": [Function],
      "onChange": undefined,
      "onFocus": [Function],
      "options": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "optionsKey": [Function],
      "parseTo": "string",
      "removable": true,
      "rightToLeft": false,
      "selectReducer": [Function],
      "selection": Array [],
      "singleNoOptions": false,
      "style": Object {
        "height": 0,
        "opacity": 1,
        "overflow": "visible",
        "overflowY": "hidden",
        "whiteSpace": "nowrap",
      },
      "styles_borderRadius": ".2em",
      "styles_checkRadio_borderWidth": "2px",
      "styles_checkRadio_labelMargin": ".2em",
      "styles_checkRadio_marginBetween": "1em",
      "styles_checkRadio_paddingBottom": ".2em",
      "styles_checkRadio_paddingLeft": ".2em",
      "styles_checkRadio_paddingRight": ".2em",
      "styles_checkRadio_paddingTop": ".2em",
      "styles_colors_background": "white",
      "styles_colors_disabled": "#ECECEC",
      "styles_colors_highlight": "lightblue",
      "styles_colors_primary": "black",
      "styles_colors_secondary": "#C3C3C3",
      "styles_colors_warning": "#FABAAC",
      "styles_colors_warningBold": "#FA2222",
      "styles_fontSize": "1em",
      "styles_icon_width": "1em",
      "styles_option_paddingBottom": ".25em",
      "styles_option_paddingLeft": ".25em",
      "styles_option_paddingRight": ".25em",
      "styles_option_paddingTop": ".25em",
      "styles_paddingBottom": ".25em",
      "styles_paddingLeft": ".25em",
      "styles_paddingRight": ".25em",
      "styles_paddingTop": ".25em",
      "styles_search_size": "8",
      "styles_selection_margin": ".2em",
      "styles_selection_paddingBottom": ".2em",
      "styles_selection_paddingLeft": ".4em",
      "styles_selection_paddingRight": ".4em",
      "styles_selection_paddingTop": ".2em",
      "svg_Checkmark": [Function],
      "svg_Expand": [Function],
      "svg_Remove": [Function],
      "text_create": "Create",
      "text_noOptions": "No Options",
      "text_placeholder": "Select...",
      "valueKey": [Function],
    }
  }
  type="CheckRadio"
/>
`;

exports[`should render CheckRadio when not overflown 1`] = `
<div
  data-props={
    Object {
      "allowDuplicates": true,
      "alwaysReturnArray": false,
      "appendToBody": false,
      "checkRadioMaxCount": 10,
      "component_AppendToBodyOptionsWrapper": [Function],
      "component_CheckBox": [Function],
      "component_CheckRadio": [Function],
      "component_HtmlFieldData": [Function],
      "component_Option": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Radio": [Function],
      "component_Search": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "hide": [Function],
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "placeholder": [Function],
            "searchText": [Function],
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Select": [Function],
      "component_Selection": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(SelectionWrapper)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_StyledAppendToBodyOptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Switch": [Function],
      "component_Wrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "creatable": false,
      "disabled": false,
      "filterOptions": [Function],
      "hasOptionGroups": false,
      "hasOptions": true,
      "hasSelection": false,
      "hierarchicalOptions": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "labelKey": [Function],
      "massageDataIn": [Function],
      "massageDataOut": [Function],
      "massaged": true,
      "multiple": false,
      "name": undefined,
      "onBlur": [Function],
      "onChange": undefined,
      "onFocus": [Function],
      "options": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "optionsKey": [Function],
      "parseTo": "string",
      "removable": true,
      "rightToLeft": false,
      "selectReducer": [Function],
      "selection": Array [],
      "singleNoOptions": false,
      "style": Object {
        "overflow": "visible",
        "whiteSpace": "nowrap",
      },
      "styles_borderRadius": ".2em",
      "styles_checkRadio_borderWidth": "2px",
      "styles_checkRadio_labelMargin": ".2em",
      "styles_checkRadio_marginBetween": "1em",
      "styles_checkRadio_paddingBottom": ".2em",
      "styles_checkRadio_paddingLeft": ".2em",
      "styles_checkRadio_paddingRight": ".2em",
      "styles_checkRadio_paddingTop": ".2em",
      "styles_colors_background": "white",
      "styles_colors_disabled": "#ECECEC",
      "styles_colors_highlight": "lightblue",
      "styles_colors_primary": "black",
      "styles_colors_secondary": "#C3C3C3",
      "styles_colors_warning": "#FABAAC",
      "styles_colors_warningBold": "#FA2222",
      "styles_fontSize": "1em",
      "styles_icon_width": "1em",
      "styles_option_paddingBottom": ".25em",
      "styles_option_paddingLeft": ".25em",
      "styles_option_paddingRight": ".25em",
      "styles_option_paddingTop": ".25em",
      "styles_paddingBottom": ".25em",
      "styles_paddingLeft": ".25em",
      "styles_paddingRight": ".25em",
      "styles_paddingTop": ".25em",
      "styles_search_size": "8",
      "styles_selection_margin": ".2em",
      "styles_selection_paddingBottom": ".2em",
      "styles_selection_paddingLeft": ".4em",
      "styles_selection_paddingRight": ".4em",
      "styles_selection_paddingTop": ".2em",
      "svg_Checkmark": [Function],
      "svg_Expand": [Function],
      "svg_Remove": [Function],
      "text_create": "Create",
      "text_noOptions": "No Options",
      "text_placeholder": "Select...",
      "valueKey": [Function],
    }
  }
  type="CheckRadio"
/>
`;

exports[`should render Select when checkRadioMaxCount is less 1`] = `
<div
  data-props={
    Object {
      "allowDuplicates": true,
      "alwaysReturnArray": false,
      "appendToBody": false,
      "checkRadioMaxCount": 0,
      "component_AppendToBodyOptionsWrapper": [Function],
      "component_CheckBox": [Function],
      "component_CheckRadio": [Function],
      "component_HtmlFieldData": [Function],
      "component_Option": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Radio": [Function],
      "component_Search": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "hide": [Function],
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "placeholder": [Function],
            "searchText": [Function],
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Select": [Function],
      "component_Selection": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(SelectionWrapper)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_StyledAppendToBodyOptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Switch": [Function],
      "component_Wrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "creatable": false,
      "disabled": false,
      "filterOptions": [Function],
      "hasOptionGroups": false,
      "hasOptions": true,
      "hasSelection": false,
      "hierarchicalOptions": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "labelKey": [Function],
      "massageDataIn": [Function],
      "massageDataOut": [Function],
      "massaged": true,
      "multiple": false,
      "name": undefined,
      "onBlur": [Function],
      "onChange": undefined,
      "onFocus": [Function],
      "options": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "optionsKey": [Function],
      "parseTo": "string",
      "removable": true,
      "rightToLeft": false,
      "selectReducer": [Function],
      "selection": Array [],
      "singleNoOptions": false,
      "styles_borderRadius": ".2em",
      "styles_checkRadio_borderWidth": "2px",
      "styles_checkRadio_labelMargin": ".2em",
      "styles_checkRadio_marginBetween": "1em",
      "styles_checkRadio_paddingBottom": ".2em",
      "styles_checkRadio_paddingLeft": ".2em",
      "styles_checkRadio_paddingRight": ".2em",
      "styles_checkRadio_paddingTop": ".2em",
      "styles_colors_background": "white",
      "styles_colors_disabled": "#ECECEC",
      "styles_colors_highlight": "lightblue",
      "styles_colors_primary": "black",
      "styles_colors_secondary": "#C3C3C3",
      "styles_colors_warning": "#FABAAC",
      "styles_colors_warningBold": "#FA2222",
      "styles_fontSize": "1em",
      "styles_icon_width": "1em",
      "styles_option_paddingBottom": ".25em",
      "styles_option_paddingLeft": ".25em",
      "styles_option_paddingRight": ".25em",
      "styles_option_paddingTop": ".25em",
      "styles_paddingBottom": ".25em",
      "styles_paddingLeft": ".25em",
      "styles_paddingRight": ".25em",
      "styles_paddingTop": ".25em",
      "styles_search_size": "8",
      "styles_selection_margin": ".2em",
      "styles_selection_paddingBottom": ".2em",
      "styles_selection_paddingLeft": ".4em",
      "styles_selection_paddingRight": ".4em",
      "styles_selection_paddingTop": ".2em",
      "svg_Checkmark": [Function],
      "svg_Expand": [Function],
      "svg_Remove": [Function],
      "text_create": "Create",
      "text_noOptions": "No Options",
      "text_placeholder": "Select...",
      "valueKey": [Function],
    }
  }
  type="Select"
/>
`;

exports[`should render Select when creatable 1`] = `
<div
  data-props={
    Object {
      "allowDuplicates": true,
      "alwaysReturnArray": false,
      "appendToBody": false,
      "checkRadioMaxCount": 10,
      "component_AppendToBodyOptionsWrapper": [Function],
      "component_CheckBox": [Function],
      "component_CheckRadio": [Function],
      "component_HtmlFieldData": [Function],
      "component_Option": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Radio": [Function],
      "component_Search": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "hide": [Function],
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "placeholder": [Function],
            "searchText": [Function],
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Select": [Function],
      "component_Selection": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(SelectionWrapper)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_StyledAppendToBodyOptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Switch": [Function],
      "component_Wrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "creatable": true,
      "disabled": false,
      "filterOptions": [Function],
      "hasOptionGroups": false,
      "hasOptions": true,
      "hasSelection": false,
      "hierarchicalOptions": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "labelKey": [Function],
      "massageDataIn": [Function],
      "massageDataOut": [Function],
      "massaged": true,
      "multiple": false,
      "name": undefined,
      "onBlur": [Function],
      "onChange": undefined,
      "onFocus": [Function],
      "options": Array [
        Object {
          "label": "option",
          "value": "1",
        },
      ],
      "optionsKey": [Function],
      "parseTo": "string",
      "removable": true,
      "rightToLeft": false,
      "selectReducer": [Function],
      "selection": Array [],
      "singleNoOptions": false,
      "styles_borderRadius": ".2em",
      "styles_checkRadio_borderWidth": "2px",
      "styles_checkRadio_labelMargin": ".2em",
      "styles_checkRadio_marginBetween": "1em",
      "styles_checkRadio_paddingBottom": ".2em",
      "styles_checkRadio_paddingLeft": ".2em",
      "styles_checkRadio_paddingRight": ".2em",
      "styles_checkRadio_paddingTop": ".2em",
      "styles_colors_background": "white",
      "styles_colors_disabled": "#ECECEC",
      "styles_colors_highlight": "lightblue",
      "styles_colors_primary": "black",
      "styles_colors_secondary": "#C3C3C3",
      "styles_colors_warning": "#FABAAC",
      "styles_colors_warningBold": "#FA2222",
      "styles_fontSize": "1em",
      "styles_icon_width": "1em",
      "styles_option_paddingBottom": ".25em",
      "styles_option_paddingLeft": ".25em",
      "styles_option_paddingRight": ".25em",
      "styles_option_paddingTop": ".25em",
      "styles_paddingBottom": ".25em",
      "styles_paddingLeft": ".25em",
      "styles_paddingRight": ".25em",
      "styles_paddingTop": ".25em",
      "styles_search_size": "8",
      "styles_selection_margin": ".2em",
      "styles_selection_paddingBottom": ".2em",
      "styles_selection_paddingLeft": ".4em",
      "styles_selection_paddingRight": ".4em",
      "styles_selection_paddingTop": ".2em",
      "svg_Checkmark": [Function],
      "svg_Expand": [Function],
      "svg_Remove": [Function],
      "text_create": "Create",
      "text_noOptions": "No Options",
      "text_placeholder": "Select...",
      "valueKey": [Function],
    }
  }
  type="Select"
/>
`;

exports[`should render Select when hasOptionGroups 1`] = `
<div
  data-props={
    Object {
      "allowDuplicates": true,
      "alwaysReturnArray": false,
      "appendToBody": false,
      "checkRadioMaxCount": 10,
      "component_AppendToBodyOptionsWrapper": [Function],
      "component_CheckBox": [Function],
      "component_CheckRadio": [Function],
      "component_HtmlFieldData": [Function],
      "component_Option": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_OptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Radio": [Function],
      "component_Search": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "hide": [Function],
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "placeholder": [Function],
            "searchText": [Function],
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Select": [Function],
      "component_Selection": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Item)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": Object {
          "removable": false,
        },
        "displayName": "Styled(ItemList)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_SelectionWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": [Function],
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(SelectionWrapper)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_StyledAppendToBodyOptionsWrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "component_Switch": [Function],
      "component_Wrapper": Object {
        "$$typeof": Symbol(react.forward_ref),
        "__emotion_base": Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "styles_borderRadius": [Function],
            "styles_checkRadio_borderWidth": [Function],
            "styles_checkRadio_labelMargin": [Function],
            "styles_checkRadio_marginBetween": [Function],
            "styles_checkRadio_paddingBottom": [Function],
            "styles_checkRadio_paddingLeft": [Function],
            "styles_checkRadio_paddingRight": [Function],
            "styles_checkRadio_paddingTop": [Function],
            "styles_colors_background": [Function],
            "styles_colors_disabled": [Function],
            "styles_colors_highlight": [Function],
            "styles_colors_primary": [Function],
            "styles_colors_secondary": [Function],
            "styles_colors_warning": [Function],
            "styles_colors_warningBold": [Function],
            "styles_fontSize": [Function],
            "styles_icon_width": [Function],
            "styles_option_paddingBottom": [Function],
            "styles_option_paddingLeft": [Function],
            "styles_option_paddingRight": [Function],
            "styles_option_paddingTop": [Function],
            "styles_paddingBottom": [Function],
            "styles_paddingLeft": [Function],
            "styles_paddingRight": [Function],
            "styles_paddingTop": [Function],
            "styles_search_size": [Function],
            "styles_selection_margin": [Function],
            "styles_selection_paddingBottom": [Function],
            "styles_selection_paddingLeft": [Function],
            "styles_selection_paddingRight": [Function],
            "styles_selection_paddingTop": [Function],
          },
          "render": [Function],
        },
        "__emotion_forwardProp": undefined,
        "__emotion_real": [Circular],
        "__emotion_styles": Array [
          [Function],
        ],
        "defaultProps": undefined,
        "displayName": "Styled(Component)",
        "render": [Function],
        "withComponent": [Function],
      },
      "creatable": false,
      "disabled": false,
      "filterOptions": [Function],
      "hasOptionGroups": true,
      "hasOptions": true,
      "hasSelection": false,
      "hierarchicalOptions": Array [
        Object {
          "childGroup": "0",
          "label": "option",
          "options": Array [
            Object {
              "group": "0",
              "label": "child",
              "value": "2",
            },
          ],
          "value": "1",
        },
      ],
      "labelKey": [Function],
      "massageDataIn": [Function],
      "massageDataOut": [Function],
      "massaged": true,
      "multiple": false,
      "name": undefined,
      "onBlur": [Function],
      "onChange": undefined,
      "onFocus": [Function],
      "options": Array [
        Object {
          "childGroup": "0",
          "label": "option",
          "options": Array [
            Object {
              "group": "0",
              "label": "child",
              "value": "2",
            },
          ],
          "value": "1",
        },
        Object {
          "group": "0",
          "label": "child",
          "value": "2",
        },
      ],
      "optionsKey": [Function],
      "parseTo": "string",
      "removable": true,
      "rightToLeft": false,
      "selectReducer": [Function],
      "selection": Array [],
      "singleNoOptions": false,
      "styles_borderRadius": ".2em",
      "styles_checkRadio_borderWidth": "2px",
      "styles_checkRadio_labelMargin": ".2em",
      "styles_checkRadio_marginBetween": "1em",
      "styles_checkRadio_paddingBottom": ".2em",
      "styles_checkRadio_paddingLeft": ".2em",
      "styles_checkRadio_paddingRight": ".2em",
      "styles_checkRadio_paddingTop": ".2em",
      "styles_colors_background": "white",
      "styles_colors_disabled": "#ECECEC",
      "styles_colors_highlight": "lightblue",
      "styles_colors_primary": "black",
      "styles_colors_secondary": "#C3C3C3",
      "styles_colors_warning": "#FABAAC",
      "styles_colors_warningBold": "#FA2222",
      "styles_fontSize": "1em",
      "styles_icon_width": "1em",
      "styles_option_paddingBottom": ".25em",
      "styles_option_paddingLeft": ".25em",
      "styles_option_paddingRight": ".25em",
      "styles_option_paddingTop": ".25em",
      "styles_paddingBottom": ".25em",
      "styles_paddingLeft": ".25em",
      "styles_paddingRight": ".25em",
      "styles_paddingTop": ".25em",
      "styles_search_size": "8",
      "styles_selection_margin": ".2em",
      "styles_selection_paddingBottom": ".2em",
      "styles_selection_paddingLeft": ".4em",
      "styles_selection_paddingRight": ".4em",
      "styles_selection_paddingTop": ".2em",
      "svg_Checkmark": [Function],
      "svg_Expand": [Function],
      "svg_Remove": [Function],
      "text_create": "Create",
      "text_noOptions": "No Options",
      "text_placeholder": "Select...",
      "valueKey": [Function],
    }
  }
  type="Select"
/>
`;

exports[`should render Select when overflown, with invisible CheckRadio 1`] = `
Array [
  <div
    data-props={
      Object {
        "allowDuplicates": true,
        "alwaysReturnArray": false,
        "appendToBody": false,
        "checkRadioMaxCount": 10,
        "component_AppendToBodyOptionsWrapper": [Function],
        "component_CheckBox": [Function],
        "component_CheckRadio": [Function],
        "component_HtmlFieldData": [Function],
        "component_Option": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Item)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_OptionList": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": Object {
            "removable": false,
          },
          "displayName": "Styled(ItemList)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_OptionsWrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "styles_borderRadius": [Function],
              "styles_checkRadio_borderWidth": [Function],
              "styles_checkRadio_labelMargin": [Function],
              "styles_checkRadio_marginBetween": [Function],
              "styles_checkRadio_paddingBottom": [Function],
              "styles_checkRadio_paddingLeft": [Function],
              "styles_checkRadio_paddingRight": [Function],
              "styles_checkRadio_paddingTop": [Function],
              "styles_colors_background": [Function],
              "styles_colors_disabled": [Function],
              "styles_colors_highlight": [Function],
              "styles_colors_primary": [Function],
              "styles_colors_secondary": [Function],
              "styles_colors_warning": [Function],
              "styles_colors_warningBold": [Function],
              "styles_fontSize": [Function],
              "styles_icon_width": [Function],
              "styles_option_paddingBottom": [Function],
              "styles_option_paddingLeft": [Function],
              "styles_option_paddingRight": [Function],
              "styles_option_paddingTop": [Function],
              "styles_paddingBottom": [Function],
              "styles_paddingLeft": [Function],
              "styles_paddingRight": [Function],
              "styles_paddingTop": [Function],
              "styles_search_size": [Function],
              "styles_selection_margin": [Function],
              "styles_selection_paddingBottom": [Function],
              "styles_selection_paddingLeft": [Function],
              "styles_selection_paddingRight": [Function],
              "styles_selection_paddingTop": [Function],
            },
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_Radio": [Function],
        "component_Search": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "hide": [Function],
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": [Function],
              "searchText": [Function],
              "styles_borderRadius": [Function],
              "styles_checkRadio_borderWidth": [Function],
              "styles_checkRadio_labelMargin": [Function],
              "styles_checkRadio_marginBetween": [Function],
              "styles_checkRadio_paddingBottom": [Function],
              "styles_checkRadio_paddingLeft": [Function],
              "styles_checkRadio_paddingRight": [Function],
              "styles_checkRadio_paddingTop": [Function],
              "styles_colors_background": [Function],
              "styles_colors_disabled": [Function],
              "styles_colors_highlight": [Function],
              "styles_colors_primary": [Function],
              "styles_colors_secondary": [Function],
              "styles_colors_warning": [Function],
              "styles_colors_warningBold": [Function],
              "styles_fontSize": [Function],
              "styles_icon_width": [Function],
              "styles_option_paddingBottom": [Function],
              "styles_option_paddingLeft": [Function],
              "styles_option_paddingRight": [Function],
              "styles_option_paddingTop": [Function],
              "styles_paddingBottom": [Function],
              "styles_paddingLeft": [Function],
              "styles_paddingRight": [Function],
              "styles_paddingTop": [Function],
              "styles_search_size": [Function],
              "styles_selection_margin": [Function],
              "styles_selection_paddingBottom": [Function],
              "styles_selection_paddingLeft": [Function],
              "styles_selection_paddingRight": [Function],
              "styles_selection_paddingTop": [Function],
            },
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_Select": [Function],
        "component_Selection": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Item)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_SelectionList": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": Object {
            "removable": false,
          },
          "displayName": "Styled(ItemList)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_SelectionWrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(SelectionWrapper)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_StyledAppendToBodyOptionsWrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_Switch": [Function],
        "component_Wrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "styles_borderRadius": [Function],
              "styles_checkRadio_borderWidth": [Function],
              "styles_checkRadio_labelMargin": [Function],
              "styles_checkRadio_marginBetween": [Function],
              "styles_checkRadio_paddingBottom": [Function],
              "styles_checkRadio_paddingLeft": [Function],
              "styles_checkRadio_paddingRight": [Function],
              "styles_checkRadio_paddingTop": [Function],
              "styles_colors_background": [Function],
              "styles_colors_disabled": [Function],
              "styles_colors_highlight": [Function],
              "styles_colors_primary": [Function],
              "styles_colors_secondary": [Function],
              "styles_colors_warning": [Function],
              "styles_colors_warningBold": [Function],
              "styles_fontSize": [Function],
              "styles_icon_width": [Function],
              "styles_option_paddingBottom": [Function],
              "styles_option_paddingLeft": [Function],
              "styles_option_paddingRight": [Function],
              "styles_option_paddingTop": [Function],
              "styles_paddingBottom": [Function],
              "styles_paddingLeft": [Function],
              "styles_paddingRight": [Function],
              "styles_paddingTop": [Function],
              "styles_search_size": [Function],
              "styles_selection_margin": [Function],
              "styles_selection_paddingBottom": [Function],
              "styles_selection_paddingLeft": [Function],
              "styles_selection_paddingRight": [Function],
              "styles_selection_paddingTop": [Function],
            },
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "creatable": false,
        "disabled": false,
        "filterOptions": [Function],
        "hasOptionGroups": false,
        "hasOptions": true,
        "hasSelection": false,
        "hierarchicalOptions": Array [
          Object {
            "label": "option",
            "value": "1",
          },
        ],
        "labelKey": [Function],
        "massageDataIn": [Function],
        "massageDataOut": [Function],
        "massaged": true,
        "multiple": false,
        "name": undefined,
        "onBlur": [Function],
        "onChange": undefined,
        "onFocus": [Function],
        "options": Array [
          Object {
            "label": "option",
            "value": "1",
          },
        ],
        "optionsKey": [Function],
        "parseTo": "string",
        "removable": true,
        "rightToLeft": false,
        "selectReducer": [Function],
        "selection": Array [],
        "singleNoOptions": false,
        "style": Object {
          "height": 0,
          "opacity": 1,
          "overflow": "visible",
          "overflowY": "hidden",
          "whiteSpace": "nowrap",
        },
        "styles_borderRadius": ".2em",
        "styles_checkRadio_borderWidth": "2px",
        "styles_checkRadio_labelMargin": ".2em",
        "styles_checkRadio_marginBetween": "1em",
        "styles_checkRadio_paddingBottom": ".2em",
        "styles_checkRadio_paddingLeft": ".2em",
        "styles_checkRadio_paddingRight": ".2em",
        "styles_checkRadio_paddingTop": ".2em",
        "styles_colors_background": "white",
        "styles_colors_disabled": "#ECECEC",
        "styles_colors_highlight": "lightblue",
        "styles_colors_primary": "black",
        "styles_colors_secondary": "#C3C3C3",
        "styles_colors_warning": "#FABAAC",
        "styles_colors_warningBold": "#FA2222",
        "styles_fontSize": "1em",
        "styles_icon_width": "1em",
        "styles_option_paddingBottom": ".25em",
        "styles_option_paddingLeft": ".25em",
        "styles_option_paddingRight": ".25em",
        "styles_option_paddingTop": ".25em",
        "styles_paddingBottom": ".25em",
        "styles_paddingLeft": ".25em",
        "styles_paddingRight": ".25em",
        "styles_paddingTop": ".25em",
        "styles_search_size": "8",
        "styles_selection_margin": ".2em",
        "styles_selection_paddingBottom": ".2em",
        "styles_selection_paddingLeft": ".4em",
        "styles_selection_paddingRight": ".4em",
        "styles_selection_paddingTop": ".2em",
        "svg_Checkmark": [Function],
        "svg_Expand": [Function],
        "svg_Remove": [Function],
        "text_create": "Create",
        "text_noOptions": "No Options",
        "text_placeholder": "Select...",
        "valueKey": [Function],
      }
    }
    type="CheckRadio"
  />,
  <div
    data-props={
      Object {
        "allowDuplicates": true,
        "alwaysReturnArray": false,
        "appendToBody": false,
        "checkRadioMaxCount": 10,
        "component_AppendToBodyOptionsWrapper": [Function],
        "component_CheckBox": [Function],
        "component_CheckRadio": [Function],
        "component_HtmlFieldData": [Function],
        "component_Option": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Item)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_OptionList": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": Object {
            "removable": false,
          },
          "displayName": "Styled(ItemList)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_OptionsWrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "styles_borderRadius": [Function],
              "styles_checkRadio_borderWidth": [Function],
              "styles_checkRadio_labelMargin": [Function],
              "styles_checkRadio_marginBetween": [Function],
              "styles_checkRadio_paddingBottom": [Function],
              "styles_checkRadio_paddingLeft": [Function],
              "styles_checkRadio_paddingRight": [Function],
              "styles_checkRadio_paddingTop": [Function],
              "styles_colors_background": [Function],
              "styles_colors_disabled": [Function],
              "styles_colors_highlight": [Function],
              "styles_colors_primary": [Function],
              "styles_colors_secondary": [Function],
              "styles_colors_warning": [Function],
              "styles_colors_warningBold": [Function],
              "styles_fontSize": [Function],
              "styles_icon_width": [Function],
              "styles_option_paddingBottom": [Function],
              "styles_option_paddingLeft": [Function],
              "styles_option_paddingRight": [Function],
              "styles_option_paddingTop": [Function],
              "styles_paddingBottom": [Function],
              "styles_paddingLeft": [Function],
              "styles_paddingRight": [Function],
              "styles_paddingTop": [Function],
              "styles_search_size": [Function],
              "styles_selection_margin": [Function],
              "styles_selection_paddingBottom": [Function],
              "styles_selection_paddingLeft": [Function],
              "styles_selection_paddingRight": [Function],
              "styles_selection_paddingTop": [Function],
            },
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_Radio": [Function],
        "component_Search": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "hide": [Function],
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": [Function],
              "searchText": [Function],
              "styles_borderRadius": [Function],
              "styles_checkRadio_borderWidth": [Function],
              "styles_checkRadio_labelMargin": [Function],
              "styles_checkRadio_marginBetween": [Function],
              "styles_checkRadio_paddingBottom": [Function],
              "styles_checkRadio_paddingLeft": [Function],
              "styles_checkRadio_paddingRight": [Function],
              "styles_checkRadio_paddingTop": [Function],
              "styles_colors_background": [Function],
              "styles_colors_disabled": [Function],
              "styles_colors_highlight": [Function],
              "styles_colors_primary": [Function],
              "styles_colors_secondary": [Function],
              "styles_colors_warning": [Function],
              "styles_colors_warningBold": [Function],
              "styles_fontSize": [Function],
              "styles_icon_width": [Function],
              "styles_option_paddingBottom": [Function],
              "styles_option_paddingLeft": [Function],
              "styles_option_paddingRight": [Function],
              "styles_option_paddingTop": [Function],
              "styles_paddingBottom": [Function],
              "styles_paddingLeft": [Function],
              "styles_paddingRight": [Function],
              "styles_paddingTop": [Function],
              "styles_search_size": [Function],
              "styles_selection_margin": [Function],
              "styles_selection_paddingBottom": [Function],
              "styles_selection_paddingLeft": [Function],
              "styles_selection_paddingRight": [Function],
              "styles_selection_paddingTop": [Function],
            },
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_Select": [Function],
        "component_Selection": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Item)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_SelectionList": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": Object {
            "removable": false,
          },
          "displayName": "Styled(ItemList)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_SelectionWrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": [Function],
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(SelectionWrapper)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_StyledAppendToBodyOptionsWrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "component_Switch": [Function],
        "component_Wrapper": Object {
          "$$typeof": Symbol(react.forward_ref),
          "__emotion_base": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "styles_borderRadius": [Function],
              "styles_checkRadio_borderWidth": [Function],
              "styles_checkRadio_labelMargin": [Function],
              "styles_checkRadio_marginBetween": [Function],
              "styles_checkRadio_paddingBottom": [Function],
              "styles_checkRadio_paddingLeft": [Function],
              "styles_checkRadio_paddingRight": [Function],
              "styles_checkRadio_paddingTop": [Function],
              "styles_colors_background": [Function],
              "styles_colors_disabled": [Function],
              "styles_colors_highlight": [Function],
              "styles_colors_primary": [Function],
              "styles_colors_secondary": [Function],
              "styles_colors_warning": [Function],
              "styles_colors_warningBold": [Function],
              "styles_fontSize": [Function],
              "styles_icon_width": [Function],
              "styles_option_paddingBottom": [Function],
              "styles_option_paddingLeft": [Function],
              "styles_option_paddingRight": [Function],
              "styles_option_paddingTop": [Function],
              "styles_paddingBottom": [Function],
              "styles_paddingLeft": [Function],
              "styles_paddingRight": [Function],
              "styles_paddingTop": [Function],
              "styles_search_size": [Function],
              "styles_selection_margin": [Function],
              "styles_selection_paddingBottom": [Function],
              "styles_selection_paddingLeft": [Function],
              "styles_selection_paddingRight": [Function],
              "styles_selection_paddingTop": [Function],
            },
            "render": [Function],
          },
          "__emotion_forwardProp": undefined,
          "__emotion_real": [Circular],
          "__emotion_styles": Array [
            [Function],
          ],
          "defaultProps": undefined,
          "displayName": "Styled(Component)",
          "render": [Function],
          "withComponent": [Function],
        },
        "creatable": false,
        "disabled": false,
        "filterOptions": [Function],
        "hasOptionGroups": false,
        "hasOptions": true,
        "hasSelection": false,
        "hierarchicalOptions": Array [
          Object {
            "label": "option",
            "value": "1",
          },
        ],
        "labelKey": [Function],
        "massageDataIn": [Function],
        "massageDataOut": [Function],
        "massaged": true,
        "multiple": false,
        "name": undefined,
        "onBlur": [Function],
        "onChange": undefined,
        "onFocus": [Function],
        "options": Array [
          Object {
            "label": "option",
            "value": "1",
          },
        ],
        "optionsKey": [Function],
        "parseTo": "string",
        "removable": true,
        "rightToLeft": false,
        "selectReducer": [Function],
        "selection": Array [],
        "singleNoOptions": false,
        "styles_borderRadius": ".2em",
        "styles_checkRadio_borderWidth": "2px",
        "styles_checkRadio_labelMargin": ".2em",
        "styles_checkRadio_marginBetween": "1em",
        "styles_checkRadio_paddingBottom": ".2em",
        "styles_checkRadio_paddingLeft": ".2em",
        "styles_checkRadio_paddingRight": ".2em",
        "styles_checkRadio_paddingTop": ".2em",
        "styles_colors_background": "white",
        "styles_colors_disabled": "#ECECEC",
        "styles_colors_highlight": "lightblue",
        "styles_colors_primary": "black",
        "styles_colors_secondary": "#C3C3C3",
        "styles_colors_warning": "#FABAAC",
        "styles_colors_warningBold": "#FA2222",
        "styles_fontSize": "1em",
        "styles_icon_width": "1em",
        "styles_option_paddingBottom": ".25em",
        "styles_option_paddingLeft": ".25em",
        "styles_option_paddingRight": ".25em",
        "styles_option_paddingTop": ".25em",
        "styles_paddingBottom": ".25em",
        "styles_paddingLeft": ".25em",
        "styles_paddingRight": ".25em",
        "styles_paddingTop": ".25em",
        "styles_search_size": "8",
        "styles_selection_margin": ".2em",
        "styles_selection_paddingBottom": ".2em",
        "styles_selection_paddingLeft": ".4em",
        "styles_selection_paddingRight": ".4em",
        "styles_selection_paddingTop": ".2em",
        "svg_Checkmark": [Function],
        "svg_Expand": [Function],
        "svg_Remove": [Function],
        "text_create": "Create",
        "text_noOptions": "No Options",
        "text_placeholder": "Select...",
        "valueKey": [Function],
      }
    }
    type="Select"
  />,
]
`;
